bug z-index navbar overlapping header fixed

--- a/src/assets/scss/_mobile.scss
+++ b/src/assets/scss/_mobile.scss
@@ -172,7 +172,7 @@
     padding: 15px;
     width: 100%;
     position: absolute;
-    z-index: 9;
+    z-index: 8;
     top: 81px;
     display: none;
 
