--- a/src/assets/scss/desktop.scss
+++ b/src/assets/scss/desktop.scss
@@ -391,7 +391,4 @@
       }
     }
   }
-
-  main {
-  }
 }
